--- a/src/components/LeftBar/LeftBar.module.css
+++ b/src/components/LeftBar/LeftBar.module.css
@@ -12,9 +12,8 @@
   flex-direction: column;
 }
 .menu {
-  background: linear-gradient(142deg, #471ca9 0%, #5736a3 69.1%, #4b2a99 100%);
-  box-shadow: -2.5776965618133545px 6.873857021331787px 20.621572494506836px 0px
-    rgba(0, 0, 0, 0.23);
+  background: var(--background-main-color);
+  box-shadow: var(--box-shadow-main);
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -36,4 +35,16 @@ hr {
 }
 .active {
   font-weight: bold;
+}
+.currentUser {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.Friends {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
 }
