--- a/src/components/Navbar/Header.module.css
+++ b/src/components/Navbar/Header.module.css
@@ -8,15 +8,40 @@
   display: flex;
   align-items: center;
   top: 0;
-  background: linear-gradient(142deg, #471ca9 0%, #5736a3 69.1%, #4b2a99 100%);
-  box-shadow: -2.5776965618133545px 6.873857021331787px 20.621572494506836px 0px
-    rgba(0, 0, 0, 0.23);
-  background-color: themed("bg");
-
+  background: var(--background-main-color);
+  box-shadow: var(--box-shadow-main);
   z-index: 2;
 }
 .header_position {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.logo {
+  color: white;
+  font-size: 28px;
+  font-weight: 500;
+}
+.rigth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+.currentUser_login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  gap: 15px;
+}
+.currentUser_foto {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.logOut {
+  cursor: pointer;
+  color: white;
 }
