--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@ body {
 }
 
 :root {
+  --background-main-color: linear-gradient(
+    142deg,
+    #471ca9 0%,
+    #5736a3 69.1%,
+    #4b2a99 100%
+  );
+  --box-shadow-main: -2.5776965618133545px 6.873857021331787px
+    20.621572494506836px 0px rgba(0, 0, 0, 0.23);
+
   color: white;
 }
 
@@ -40,7 +49,7 @@ button {
   cursor: pointer;
 }
 .container {
-  width: 1128px;
+  width: 1500px;
   margin: 0 auto;
   padding: 0 30px;
 }
